fixes overflow for the settings view

--- a/app/assets/stylesheets/_repo-settings.scss
+++ b/app/assets/stylesheets/_repo-settings.scss
@@ -1,5 +1,6 @@
 .repo-settings-wrapper {
   width: 100%;
+  overflow-y: auto;
 }
 .repo-settings {
   @include display(flex);
